--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
   <div class="container">
     <div class="card">
       <div class="advice-id-field">
-        <h1>Advice #1</h1>
+        <h1 id="advice-id">Advice #</h1>
       </div>
       <div class="adivce-text-field">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius praesentium corporis dolores, et nam </p>
-        <img src="./images/pattern-divider-mobile.svg" class="divider" alt="">
+        <p id="advice-text"></p>
+        <img src="./images/pattern-divider-desktop.svg" class="divider" id="pattern-desk">
+        <img src="./images/pattern-divider-mobile.svg" class="divider-mobile " id="pattern-mob">
       </div>
-      <button class="btn"><img src="./images/icon-dice.svg" alt=""></button>
+      <button class="btn" id="btn"><img src="./images/icon-dice.svg" alt=""></button>
     </div>
       
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">TaiBiscuit</a>.
   </div>
   </div>
+  <footer>
+    <script src="./script.js"></script>
+  </footer>
 </body>
 </html>
